@@ -521,6 +521,9 @@ MW_STATUS_SAVED=Project saved
 MW_STATUS_CURSOR_LOCK_ON=Cursor lock on
 MW_STATUS_CURSOR_LOCK_OFF=Cursor lock off
 
+MW_STATUS_INSERT_MODE=Insert Mode
+MW_STATUS_OVERWRITE_MODE=Overwrite Mode
+
 MW_SEGMENT_LENGTH_DEFAULT=\ --/--
 MW_QUIT_CONFIRM=Do you really want to quit?
 MW_SEGMENT_LENGTH_TOOLTIP=Source/translation lengths (characters)
