@@ -16,6 +16,7 @@ editorSkipPrevToken=ctrl LEFT
 editorSkipNextTokenWithSelection=ctrl shift RIGHT
 editorSkipPrevTokenWithSelection=ctrl shift LEFT
 editorToggleCursorLock=F2
+editorToggleOvertype=INSERT
 
 ## Autocompleter ##
 autocompleterTrigger=ctrl SPACE
