@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 4.2.1
 ----------------------------------------------------------------------
-  3 Enhancements
+  4 Enhancements
   0 Bug fixes
   0 Localisation updates
 ----------------------------------------------------------------------
@@ -18,6 +18,9 @@
   - Context menu keyboard shortcut supported in Glossary, Fuzzy Matches,
   Multiple Translations panes
   https://sourceforge.net/p/omegat/feature-requests/1415/
+
+  - In the editor, the "Insert" key switches between Edit and Overwrite mode.
+  https://sourceforge.net/p/omegat/feature-requests/45/
 
 ----------------------------------------------------------------------
  OmegaT 4.2.0 (2019-04-23)
